# blockworx

./: Cargo.toml  LICENSE  sample.kdl  todo.md
src/: app.rs  grid.rs  lib.rs  main.rs  render.rs  state.rs  store.rs  theme.rs  turtle.rs
src/canvas/: interaction.rs  mod.rs  painter.rs  view.rs
src/db/: mod.rs
src/document/: mod.rs  parse_kdl.rs
src/render/: mod.rs
src/router/: block.rs  channel.rs  coord.rs  cost.rs  event.rs  mod.rs  point.rs  segment.rs
src/state/: mod.rs
src/widget/: auto_route.rs  block.rs  data.rs  direction.rs  drawing.rs  edge.rs  label.rs  linear_distance.rs  mod.rs  pin.rs  port.rs  rect_box.rs  render.rs  segmentkind.rs  shape.rs  waypoint.rs  wire_label.rs
src/widget/tool/: mod.rs  new_block.rs  new_pin.rs  route.rs
src/widget/tool/select/: drag_pin.rs  mod.rs  rename_pin.rs
src/widget_ng/: display.rs  mod.rs  move_pin.rs  move_tool.rs  names.rs  new_block.rs  new_pin.rs  rename_pin.rs  render.rs  route.rs  route_tool.rs  tool.rs  toolbar.rs
src/widget_ng/tools/: mod.rs  move_block.rs  move_pin.rs  move_tool.rs  new_block.rs  new_pin.rs  rename_pin.rs  resize_block.rs  route_tool.rs
